2015-02-24         Arnold D. Robbins     <arnold@skeeve.com>

	* POSIX.STD: Update copyright year.
	* awkgram.y (yylex): Allow \r after \\ line continuation everywhere.
	Thanks to Scott Rush <scott.rush@honeywell.com> for the report.

2015-02-13         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (yylex): Be more careful about passing true to
	nextc() when collecting a regexp.  Some systems' iscntrl()
	are not as forgiving as GLIBC's. E.g., Solaris.
	Thanks to Dagobert Michelsen <dam@baltic-online.de> for
	the bug report and access to systems to check the fix.

2015-02-12         Arnold D. Robbins     <arnold@skeeve.com>

	* POSIX.STD: Update with info about function parameters.
	* configure.ac: Remove test for / use of dbug library.

2015-02-11         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkapi.h: Fix spelling error in comment.

2015-02-10         Arnold D. Robbins     <arnold@skeeve.com>

	* profile.c (pprint): Restore printing of count for rules.
	Bug report by Hermann Peifer.

2015-02-08         Arnold D. Robbins     <arnold@skeeve.com>

	* io.c: Make it "NONFATAL" everywhere.

2015-02-08         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* awk.h (RED_NON_FATAL): Removed.
	(redirect): Add new failure_fatal parameter.
	(is_non_fatal_redirect): Add declaration.
	* builtin.c (efwrite): Rework check for non-fatal.
	(do_printf): Adjust calls to redirect.
	(do_print_rec): Ditto. Move check for redirection error up.
	* io.c (redflags2str): Remove RED_NON_FATAL.
	(redirect): Add new failure_fatal parameter. Simplify the code.
	(is_non_fatal_redirect): New function.
	(do_getline_redir): Adjust calls to redirect.

2014-12-27         Arnold D. Robbins     <arnold@skeeve.com>

	* awk.h (is_non_fatal_std): Declare new function.
	* io.c (is_non_fatal_std): New function.
	* builtin.c (efwrite): Call it.

2015-02-07         Arnold D. Robbins     <arnold@skeeve.com>

	* regcomp.c, regex.c, regex.h, regex_internal.c, regex_internal.h,