@@ -1,3 +1,10 @@
+2015-02-27         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* io.c (socketopen): New parameter hard_error; set it if
+	getaddrinfo() fails. Change fatals to warnings.
+	(devopen): Pass in address of boolean hard_error variable
+	and stop trying to open the file if hard_error is true.
+
 2015-02-24         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* POSIX.STD: Update copyright year.
